--- a/client/src/app/modules/miscellaneous/components/tiers-followup/tiers-followup.component.html
+++ b/client/src/app/modules/miscellaneous/components/tiers-followup/tiers-followup.component.html
@@ -1,4 +1,6 @@
-<div class="mat-elevation-z2 form-div">
+<automatic-mail-list [customerOrder]="invoice.customerOrder" *ngIf="invoice && invoice.customerOrder"
+  searchText="est en attente de paiement" [isHideSearchField]="true"></automatic-mail-list>
+<div class="mat-elevation-z2 form-div" style="padding-bottom: 40px;">
   <form [formGroup]="followupForm">
     <div class="full-width">
       <table class="full-width">
