apply modif template from hompage

--- a/client-jss/src/app/main/components/post-category-header/post-category-header.component.html
+++ b/client-jss/src/app/main/components/post-category-header/post-category-header.component.html
@@ -2,5 +2,5 @@
   <p>
     {{selectedJssCategory.name}}
   </p>
-  <hub-category [selectedEntityType]="selectedJssCategory"></hub-category>
+  <category-hub [selectedEntityType]="selectedJssCategory"></category-hub>
 </div>
