--- a/client-jss/src/app/main/components/generic-hub/generic-hub.component.html
+++ b/client-jss/src/app/main/components/generic-hub/generic-hub.component.html
@@ -26,28 +26,32 @@
               </div>
             </div>
 
-            <div *ngIf="postsByEntityType && postsByEntityType.length>0 && !searchText" class="row p-0">
+            <div *ngIf="postsByEntityType && postsByEntityType.length>0 && !searchText"
+              class="row p-0 fixed-size-img-posts">
               <div *ngFor="let post of postsByEntityType.slice(0,6)" class="col-6 mb-4">
                 <article class="border-0 card h-100">
-                  <div class="card-img px-2">
-                    <div class="image-frame image-hover-style-1">
+                  <div class="card-img px-2 d-flex">
+                    <div class="image-hover-style-1 w-100">
                       <a (click)="openPost(post, $event)"> <img *ngIf="post.media" class="lazyload"
                           [src]="post.media.urlMediumLarge!=null ? post.media.urlMediumLarge : post.media.urlFull"
-                          [alt]="post.media.alt_text" class="w-100"></a>
+                          [alt]="post.media.alt_text" class="w-100"> </a>
                     </div>
                   </div>
                   <div class="card-body">
                     <div class="row pb-1 px-2 align-items-center">
                       <a (click)="openCategoryPosts(post.jssCategories[0], $event)"
                         class="badge bg-info rounded-pill px-1 col-auto me-2">{{post.jssCategories[0].name}}</a>
-                      <a class="btn btn-outline-secondary fs-9 rounded-circle col-auto"><i class="icon-mkpage"></i>
-                        mp</a>
+                      <a
+                        class="rounded-outline-icon rounded-circle fs-8 d-flex align-items-center justify-content-center"><i
+                          class="bi-bookmark"></i></a>
                     </div>
                     <h4>
                       <a class="card-text-truncate" (click)="openPost(post, $event)"> <img *ngIf="post.isPremium"
                           class="pe-0" src="/assets/images/premium-icon.svg">
                         {{post.titleText}}</a>
                     </h4>
+                    <p class="card-text-truncate mb-0" [innerHTML]="post.excerptText | trustHtml">
+                    </p>
                   </div>
                   <div class="row align-items-center px-2">
                     <div class="col-lg-6">
@@ -62,7 +66,7 @@
                       </div>
                     </div>
                     <div class="col-lg-6"> <span class="date-info fs-9 float-lg-end">
-                        <span>Publié le {{post.date | date:'EEEE d MMMM'}} à {{post.date | date:'HH:mm'}}</span>
+                        <span>Publié le {{post.date | date:'EEEE d MMMM'}}</span>
                       </span>
                     </div>
                   </div>
@@ -112,28 +116,32 @@
               </div>
             </div>
 
-            <div *ngIf="searchResults && searchResults.length>0 && searchText && searchText.length>2" class="row p-0">
-              <div *ngFor="let post of searchResults | slice:0:2" class="col-12 col-md-4 mb-2">
+            <div *ngIf="searchResults && searchResults.length>0 && searchText && searchText.length>2"
+              class="row p-0 fixed-size-img-posts">
+              <div *ngFor="let post of postsByEntityType.slice(0,6)" class="col-6 mb-4">
                 <article class="border-0 card h-100">
-                  <div class="card-img px-2">
-                    <div class="image-frame image-hover-style-1">
+                  <div class="card-img px-2 d-flex">
+                    <div class="image-hover-style-1 w-100">
                       <a (click)="openPost(post, $event)"> <img *ngIf="post.media" class="lazyload"
                           [src]="post.media.urlMediumLarge!=null ? post.media.urlMediumLarge : post.media.urlFull"
-                          [alt]="post.media.alt_text" class="w-100"></a>
+                          [alt]="post.media.alt_text" class="w-100"> </a>
                     </div>
                   </div>
                   <div class="card-body">
                     <div class="row pb-1 px-2 align-items-center">
                       <a (click)="openCategoryPosts(post.jssCategories[0], $event)"
                         class="badge bg-info rounded-pill px-1 col-auto me-2">{{post.jssCategories[0].name}}</a>
-                      <a class="btn btn-outline-secondary fs-9 rounded-circle col-auto"><i class="icon-mkpage"></i>
-                        mp</a>
+                      <a
+                        class="rounded-outline-icon rounded-circle fs-8 d-flex align-items-center justify-content-center"><i
+                          class="bi-bookmark"></i></a>
                     </div>
                     <h4>
                       <a class="card-text-truncate" (click)="openPost(post, $event)"> <img *ngIf="post.isPremium"
                           class="pe-0" src="/assets/images/premium-icon.svg">
                         {{post.titleText}}</a>
                     </h4>
+                    <p class="card-text-truncate mb-0" [innerHTML]="post.excerptText | trustHtml">
+                    </p>
                   </div>
                   <div class="row align-items-center px-2">
                     <div class="col-lg-6">
@@ -148,11 +156,51 @@
                       </div>
                     </div>
                     <div class="col-lg-6"> <span class="date-info fs-9 float-lg-end">
-                        <span>Publié le {{post.date | date:'EEEE d MMMM'}} à {{post.date | date:'HH:mm'}}</span>
+                        <span>Publié le {{post.date | date:'EEEE d MMMM'}}</span>
                       </span>
                     </div>
                   </div>
                 </article>
+              </div>
+              <div *ngFor="let post of postsByEntityType.slice(6)" class="col-12 mb-2">
+                <article class="blog-style2 card mb-4">
+                  <div class="feature-image">
+                    <div class="image-frame image-hover-style-1">
+                      <a (click)="openPost(post, $event)"> <img *ngIf="post.media" class="lazyload"
+                          [src]="post.media.urlMediumLarge!=null ? post.media.urlMediumLarge : post.media.urlFull"
+                          [alt]="post.media.alt_text" class="w-100"></a>
+                    </div>
+                  </div>
+                  <div class="card-body  d-md-flex align-items-center">
+                    <div class="card-flex-content">
+                      <a (click)="openCategoryPosts(post.jssCategories[0], $event)"
+                        class="badge bg-info rounded-pill px-1 col-auto me-2">{{post.jssCategories[0].name}}</a>
+                      <h4>
+                        <a class="card-text-truncate" (click)="openPost(post, $event)"> <img *ngIf="post.isPremium"
+                            class="pe-0" src="/assets/images/premium-icon.svg">
+                          {{post.titleText}}</a>
+                      </h4>
+                      <div class="row">
+                        <div class="col-lg-6">
+                          <div class="author-block">
+                            <ul class="avatar list-inline mb-0">
+                              <li class="list-inline-item"><a class="fs-9"
+                                  (click)="openAuthorPosts(post.fullAuthor, $event)"><img
+                                    [src]="post.fullAuthor.avatar_url_size_24" [alt]="post.fullAuthor.name"
+                                    data-bs-toggle="tooltip" data-bs-placement="top" [title]="post.fullAuthor.name">
+                                  {{post.fullAuthor.name}}</a></li>
+                            </ul>
+                          </div>
+                        </div>
+                        <div class="col-lg-6"> <span class="date-info fs-9 float-lg-end">
+                            <span>Publié le {{post.date | date:'EEEE d MMMM'}} à {{post.date | date:'HH:mm'}}</span>
+                          </span>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </article>
+                <hr>
               </div>
             </div>
           </div>
@@ -171,7 +219,7 @@
               </div>
               <ul class="tag-cloud list-inline" *ngFor="let tag of tagsByEntityType">
                 <li class="list-inline-item"><a class="btn btn-primary btn-sm rounded"
-                    href="category.html">{{tag.slug}}</a>
+                    (click)="openTagPosts(tag,$event)">{{tag.slug}}</a>
                 </li>
               </ul>
             </div>
