--- a/client/src/app/modules/administration/components/constant/constant.component.html
+++ b/client/src/app/modules/administration/components/constant/constant.component.html
@@ -1646,6 +1646,30 @@
             </td>
           </tr>
           <tr>
+          <tr>
+            <td>
+              <select-jss-category [(model)]="constant.jssCategoryJustice" label="Catégorie Jss - Justice"
+                [form]="constantForm" propertyName="jssCategoryJustice" [isMandatory]="false"
+                [isDisabled]="!editMode"></select-jss-category>
+            </td>
+          </tr>
+          <tr>
+          <tr>
+            <td>
+              <select-jss-category [(model)]="constant.jssCategoryLaw" label="Catégorie Jss - Droit"
+                [form]="constantForm" propertyName="jssCategoryLaw" [isMandatory]="false"
+                [isDisabled]="!editMode"></select-jss-category>
+            </td>
+          </tr>
+          <tr>
+          <tr>
+            <td>
+              <select-jss-category [(model)]="constant.jssCategoryEconomics" label="Catégorie Jss - Économie"
+                [form]="constantForm" propertyName="jssCategoryEconomics" [isMandatory]="false"
+                [isDisabled]="!editMode"></select-jss-category>
+            </td>
+          </tr>
+          <tr>
             <td>
               <select-accounting-account-class [(model)]="constant.accountingAccountClassProduct"
                 label="Classe comptable - Produits" [form]="constantForm" propertyName="accountingAccountClassProduct"
