--- a/client-jss/src/app/main/components/main/main.component.html
+++ b/client-jss/src/app/main/components/main/main.component.html
@@ -380,15 +380,6 @@
                         <div class="col-md-12">
                             <div class="section-title-block d-flex pb-3">
                                 <h3 class="section-widget-title">L’actualité par catégories</h3>
-                                <!-- TODO : not logic to have it :
-                                <a (click)="open" class="text-uppercase section-title-link">
-                                    Voir tous
-                                    <svg width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                                        <path
-                                            d="M1.5 13.5h17.79l-5.445 6.54a1.502 1.502 0 102.31 1.92l7.5-9a1.78 1.78 0 00.135-.226c0-.075.075-.12.105-.195A1.5 1.5 0 0024 12a1.499 1.499 0 00-.105-.54c0-.075-.075-.12-.105-.195a1.766 1.766 0 00-.135-.225l-7.5-9A1.499 1.499 0 0015 1.5a1.5 1.5 0 00-1.155 2.46l5.445 6.54H1.5a1.5 1.5 0 100 3z">
-                                        </path>
-                                    </svg>
-                                </a> -->
                             </div>
                         </div>
                         <div *ngIf="!justiceTopPosts || justiceTopPosts.length == 0" class="col-md-6 col-lg-4 pb-3">
@@ -405,7 +396,7 @@
                                 <div class="col-md-12">
                                     <div class="section-title-block d-flex pb-3">
                                         <h3 class="section-widget-title text-uppercase"> {{
-                                            constantJustice?.name }}
+                                            firstCategory.name }}
                                         </h3>
                                     </div>
                                 </div>
@@ -432,7 +423,7 @@
                             </article>
                             <div class="row">
                                 <div class="col mt-3">
-                                    <a *ngIf="constantJustice" (click)="openCategoryPosts(constantJustice, $event)"
+                                    <a *ngIf="firstCategory" (click)="openCategoryPosts(firstCategory, $event)"
                                         class="text-uppercase section-title-link">
                                         Voir tous
                                         <svg width="24" height="24" viewBox="0 0 24 24"
@@ -459,7 +450,7 @@
                                 <div class="col-md-12">
                                     <div class="section-title-block d-flex pb-3">
                                         <h3 class="section-widget-title text-uppercase"> {{
-                                            constantLaw?.name }}
+                                            secondCategory.name }}
                                         </h3>
                                     </div>
                                 </div>
@@ -486,7 +477,7 @@
                             </article>
                             <div class="row">
                                 <div class="col mt-3">
-                                    <a *ngIf="constantLaw" (click)="openCategoryPosts(constantLaw, $event)"
+                                    <a *ngIf="secondCategory" (click)="openCategoryPosts(secondCategory, $event)"
                                         class="text-uppercase section-title-link">
                                         Voir tous
                                         <svg width="24" height="24" viewBox="0 0 24 24"
@@ -513,7 +504,7 @@
                                 <div class="col-md-12">
                                     <div class="section-title-block d-flex pb-3">
                                         <h3 class="section-widget-title text-uppercase"> {{
-                                            constantEconomics?.name }}
+                                            thirdCategory.name }}
                                         </h3>
                                     </div>
                                 </div>
@@ -542,7 +533,7 @@
                             </article>
                             <div class="row">
                                 <div class="col mt-3">
-                                    <a *ngIf="constantEconomics" (click)="openCategoryPosts(constantEconomics, $event)"
+                                    <a *ngIf="thirdCategory" (click)="openCategoryPosts(thirdCategory, $event)"
                                         class="text-uppercase section-title-link">
                                         Voir tous
                                         <svg width="24" height="24" viewBox="0 0 24 24"
@@ -591,7 +582,7 @@
                                         alt="raide-comme-la-justice image" class="w-100"></a>
                             </div>
                         </div>
-                        <div *ngFor="let podcast of podcasts | slice:0:4" class="col-12 col-sm-6 col-md-4 col-lg-3">
+                        <div *ngFor="let podcast of podcasts" class="col-12 col-sm-6 col-md-4 col-lg-3">
                             <div class="card h-100 bg-light-blue border-0 my-2 my-sm-0">
                                 <div
                                     class="card-body d-flex flex-column align-items-center text-center justify-content-between">
