--- a/client-jss/src/app/main/components/generic-hub/generic-hub.component.css
+++ b/client-jss/src/app/main/components/generic-hub/generic-hub.component.css
@@ -49,3 +49,12 @@
   line-height: 1;
   cursor: pointer;
 }
+
+.fixed-size-img-posts .card-img img {
+  height: 320px;
+  width: 100%;
+  object-fit: cover;
+  object-position: center;
+  display: block;
+  border-radius: inherit;
+}
