fix constant bug on Osiris

--- a/client/src/app/modules/administration/components/constant/constant.component.html
+++ b/client/src/app/modules/administration/components/constant/constant.component.html
@@ -1648,24 +1648,25 @@
           <tr>
           <tr>
             <td>
-              <select-jss-category [(model)]="constant.jssCategoryJustice" label="Catégorie Jss - Justice"
-                [form]="constantForm" propertyName="jssCategoryJustice" [isMandatory]="false"
-                [isDisabled]="!editMode"></select-jss-category>
+              <select-jss-category [(model)]="constant.jssCategoryHomepageFirstHighlighted"
+                label="Catégorie Jss - Justice" [form]="constantForm" propertyName="jssCategoryHomepageFirstHighlighted"
+                [isMandatory]="false" [isDisabled]="!editMode"></select-jss-category>
             </td>
           </tr>
           <tr>
           <tr>
             <td>
-              <select-jss-category [(model)]="constant.jssCategoryLaw" label="Catégorie Jss - Droit"
-                [form]="constantForm" propertyName="jssCategoryLaw" [isMandatory]="false"
-                [isDisabled]="!editMode"></select-jss-category>
+              <select-jss-category [(model)]="constant.jssCategoryHomepageSecondHighlighted"
+                label="Catégorie Jss - Droit" [form]="constantForm" propertyName="jssCategoryHomepageSecondHighlighted"
+                [isMandatory]="false" [isDisabled]="!editMode"></select-jss-category>
             </td>
           </tr>
           <tr>
           <tr>
             <td>
-              <select-jss-category [(model)]="constant.jssCategoryEconomics" label="Catégorie Jss - Économie"
-                [form]="constantForm" propertyName="jssCategoryEconomics" [isMandatory]="false"
+              <select-jss-category [(model)]="constant.jssCategoryHomepageThirdHighlighted"
+                label="Catégorie Jss - Économie" [form]="constantForm"
+                propertyName="jssCategoryHomepageThirdHighlighted" [isMandatory]="false"
                 [isDisabled]="!editMode"></select-jss-category>
             </td>
           </tr>
