--- a/client-jss/src/app/main/components/main/main.component.html
+++ b/client-jss/src/app/main/components/main/main.component.html
@@ -10,7 +10,7 @@
     <div class="bg-container">
         <div class="blog-area">
             <div class="row">
-                <div class="col-lg-8">
+                <div class="col-lg-8 col-12">
                     <div *ngIf="!lastPosts || lastPosts.length == 0">
                         <div class="panel-loader">
                             <div class="skeleton skeleton-header"></div>
@@ -114,8 +114,8 @@
                                 </div>
                             </div>
                             <div *ngFor="let post of lastPosts | slice:3:10">
-                                <article data-aos="fade-up" class="blog-style2 card my-3 d-flex">
-                                    <div class="feature-image">
+                                <article data-aos="fade-up" class="blog-style2 card my-3">
+                                    <div class="feature-image order-1 order-lg-0">
                                         <div class="image-frame image-hover-style-1">
                                             <a (click)="openPost(post, $event)"> <img class="lazyload"
                                                     *ngIf="post.media"
@@ -123,8 +123,9 @@
                                                     [alt]="post.media.alt_text" class="w-100"></a>
                                         </div>
                                     </div>
-                                    <div data-aos="fade-in" class="card-body d-md-flex align-items-center p-0">
-                                        <div class="card-flex-content">
+                                    <div data-aos="fade-in"
+                                        class="card-body d-flex flex-column flex-lg-row align-items-stretch p-0">
+                                        <div class="order-0 order-lg-1">
                                             <div class="row align-items-center ms-0 mb-1">
                                                 <a (click)="openCategoryPosts(post.jssCategories[0], $event)"
                                                     class="badge bg-info rounded-pill px-1 col-auto me-2 mb-0">{{post.jssCategories[0].name}}</a>
@@ -179,7 +180,7 @@
                 </div>
 
                 <!-- section to the right -->
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-12">
                     <!-- Newsletter -->
                     <div class="border border-light bg-newsletter card p-3 mb-3">
                         <div class="wrapper">
@@ -262,7 +263,7 @@
                             <div class="card bg-secondary">
                                 <div class="card-body">
 
-                                    <!-- Ligne 1 : image + titre -->
+                                    <!-- Line 1 : image + title -->
                                     <div class="d-flex align-items-center mb-2 row flex-row">
                                         <img src="assets/images/homepage/raide-comme-la-justice.png"
                                             alt="raide-comme-la-justice image" class="img-fluid h-100 col-4"
@@ -276,7 +277,7 @@
                                         </div>
                                     </div>
 
-                                    <!-- Ligne 2 : bouton + date -->
+                                    <!-- Line 2 : button + date -->
                                     <div class="d-flex align-items-center">
                                         <a class="btn-light btn-sm rounded-circle btn-circle fs-7"><i
                                                 class=" bi-play-fill"></i></a>
@@ -582,13 +583,13 @@
                                         alt="raide-comme-la-justice image" class="w-100"></a>
                             </div>
                         </div>
-                        <div *ngFor="let podcast of podcasts" class="col-12 col-sm-6 col-md-4 col-lg-3">
+                        <div *ngFor="let podcast of podcasts" class="col-12 col-sm-6 col-md-4 col-lg-3 mb-2 mb-md-0">
                             <div class="card h-100 bg-light-blue border-0 my-2 my-sm-0">
                                 <div
                                     class="card-body d-flex flex-column align-items-center text-center justify-content-between">
                                     <h6 class="text-uppercase fs-8">Podcast</h6>
                                     <h4><a>{{podcast.titleText}}</a></h4>
-                                    <a class="btn btn-outline-dark my-3 px-5" href="#"><i class="me-1"></i>
+                                    <a class="btn btn-outline-dark my-3 px-5" href="#"><i class="bi-play-fill me-1"></i>
                                         Écouter</a>
                                 </div>
                             </div>
