--- a/client/src/app/modules/administration/components/constant/constant.component.html
+++ b/client/src/app/modules/administration/components/constant/constant.component.html
@@ -1649,23 +1649,25 @@
           <tr>
             <td>
               <select-jss-category [(model)]="constant.jssCategoryHomepageFirstHighlighted"
-                label="Catégorie Jss - Justice" [form]="constantForm" propertyName="jssCategoryHomepageFirstHighlighted"
-                [isMandatory]="false" [isDisabled]="!editMode"></select-jss-category>
+                label="Catégorie Jss - 1ère catégorie mise en avant" [form]="constantForm"
+                propertyName="jssCategoryHomepageFirstHighlighted" [isMandatory]="false"
+                [isDisabled]="!editMode"></select-jss-category>
             </td>
           </tr>
           <tr>
           <tr>
             <td>
               <select-jss-category [(model)]="constant.jssCategoryHomepageSecondHighlighted"
-                label="Catégorie Jss - Droit" [form]="constantForm" propertyName="jssCategoryHomepageSecondHighlighted"
-                [isMandatory]="false" [isDisabled]="!editMode"></select-jss-category>
+                label="Catégorie Jss - 2ème catégorie mise en avant" [form]="constantForm"
+                propertyName="jssCategoryHomepageSecondHighlighted" [isMandatory]="false"
+                [isDisabled]="!editMode"></select-jss-category>
             </td>
           </tr>
           <tr>
           <tr>
             <td>
               <select-jss-category [(model)]="constant.jssCategoryHomepageThirdHighlighted"
-                label="Catégorie Jss - Économie" [form]="constantForm"
+                label="Catégorie Jss - 3ème catégorie mise en avant" [form]="constantForm"
                 propertyName="jssCategoryHomepageThirdHighlighted" [isMandatory]="false"
                 [isDisabled]="!editMode"></select-jss-category>
             </td>
