--- a/client-jss/src/app/main/components/generic-hub/generic-hub.component.html
+++ b/client-jss/src/app/main/components/generic-hub/generic-hub.component.html
@@ -1,8 +1,8 @@
 <div class="container">
   <ng-container *ngIf="selectedEntityType">
     <div class="bg-container">
-      <div class="w-100 justify-content-between my-3">
-        <div class="container pt-5">
+      <div class="w-100 justify-content-between mb-3">
+        <div class="container">
           <div class="row">
             <div class="col-8">
               <div class="input-group custom-input-group align-items-center py-0 rounded-1 row mb-3">
@@ -209,38 +209,60 @@
             </div>
 
             <div class="col-md-4">
-              <div class="sidebar-widget mb-3 border border-light rounded">
+              <div class="card mb-3 border border-light p-3">
                 <div class="wrapper">
                   <div class="row">
-                    <div class="col-12">
+                    <div class="col-md-12">
                       <div class="section-title-block d-flex pb-3">
                         <h3 class="section-widget-title">Tags liés</h3>
 
                       </div>
                     </div>
                   </div>
-                  <ul class="tag-cloud list-inline" *ngFor="let tag of tagsByEntityType">
-                    <li class="list-inline-item"><a class="btn btn-primary btn-sm rounded"
-                        (click)="openTagPosts(tag,$event)">{{tag.slug}}</a>
+                  <ul class="tag-cloud list-inline">
+                    <li *ngFor="let tag of tagsByEntityType" class="list-inline-item pb-1"><a
+                        class="btn bg-light text-secondary bg-hover-danger text-hover-white bg-hover-secondary text-hover-white"
+                        href="category.html">{{tag.name}}</a>
                     </li>
                   </ul>
                 </div>
               </div>
-              <div class="row" *ngFor="let post of postsByEntityType.slice(6)">
-                <div class="col-md-12"></div>
+
+              <div class="mb-3 border border-light card">
+                <div class="wrapper p-3">
+                  <div class="row">
+                    <div class="col-md-12">
+                      <div class="section-title-block d-flex">
+                        <h3 class="section-widget-title">Les plus vus</h3>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="tab-content" id="tab-content">
+                    <div *ngFor="let post of mostSeenPostsByEntityType.slice(0,5); let index = index"
+                      class="row align-items-center my-3">
+                      <div class="col-auto digits pe-2">
+                        {{index+1}}.
+                      </div>
+                      <div class="col counter-post-item card-title-truncate ps-2">
+                        <a (click)="openPost(post, $event)" class="title-most-seen">{{post.titleText}}</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </div>
 
-              <div class="sidebar-widget mb-3 border border-light rounded">
-                <div class="wrapper">
-                  <h3 class="section-widget-title">Les plus vus</h3>
-                  <div class="tab-content" id="tab-content">
-                    <div class="tab-pane fade show active" id="tab1">
-                      <ul class="counter-post list-inline"
-                        *ngFor="let mostSeenPost of mostSeenPostsByEntityType.slice(0,5)">
-                        <li class="counter-post-item">
-                          <a href="single.html"> {{mostSeenPost.titleText}}</a>
-                        </li>
-                      </ul>
+              <div class="border border-light card p-3 mb-3 bg-secondary">
+                <div class="wrapper text-white">
+                  <div class="row">
+                    <div class="col-md-12">
+                      <div class="section-title-block d-flex ">
+                        <h3 class="text-white">Au cœur de l'actualité !</h3>
+                      </div>
+                    </div>
+                  </div>
+                  <p>Infos locales, analyses et enquêtes : restez informé(e) sans limite.</p>
+                  <div class="row align-items-center">
+                    <div class="btn btn-yellow">S'abonner
                     </div>
                   </div>
                 </div>
