--- a/client-jss/src/app/main/components/post-author-header/post-author-header.component.html
+++ b/client-jss/src/app/main/components/post-author-header/post-author-header.component.html
@@ -1,6 +1,20 @@
 <div *ngIf="selectedAuthor">
-  <p>
-    {{selectedAuthor.name}}
-  </p>
+  <div class="container">
+    <div class="bg-container">
+      <div class="w-100 justify-content-between">
+        <div class="container header-hub-bg d-flex align-items-center">
+          <div class="row w-100">
+            <div class="col-12 ">
+              <div class="d-flex align-items-center gap-3 flex-wrap">
+                <h3 class="section-widget-title m-0">{{selectedAuthor.name}}</h3>
+                <button type="button" class="btn btn-outline-dark"> <i class="bi bi-plus-lg me-2"></i>Suivre</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <author-hub [selectedEntityType]="selectedAuthor"></author-hub>
 </div>
