--- a/client-jss/src/app/main/components/post-idf-header/post-idf-header.component.html
+++ b/client-jss/src/app/main/components/post-idf-header/post-idf-header.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="selectedSerie">
+<div *ngIf="selectedDepartment">
   <div class="container">
     <div class="bg-container">
       <div class="w-100 justify-content-between">
@@ -6,7 +6,7 @@
           <div class="row w-100">
             <div class="col-12 ">
               <div class="d-flex align-items-center gap-3 flex-wrap">
-                <h3 class="section-widget-title m-0">{{selectedSerie.name}}</h3>
+                <h3 class="section-widget-title m-0">Région Ile-de-France</h3>
 
               </div>
             </div>
@@ -15,6 +15,5 @@
       </div>
     </div>
   </div>
-
-  <serie-hub [selectedEntityType]="selectedSerie"></serie-hub>
+  <idf-hub></idf-hub>
 </div>
