--- a/client-jss/src/assets/css/style.css
+++ b/client-jss/src/assets/css/style.css
@@ -13538,3 +13538,8 @@ ul.entry-comment .comment-content ul, ul.entry-comment .comment-content ol {
   align-items: center;
   justify-content: center;
 }
+
+.header-hub-bg {
+  background: #F6F9FC;
+  min-height: 100px;
+}
