--- a/client-jss/src/app/main/components/header/header.component.html
+++ b/client-jss/src/app/main/components/header/header.component.html
@@ -52,7 +52,8 @@
       <nav class="navbar text-uppercase text-white-100 navbar-expand-lg">
         <div class="collapse navbar-collapse" id="main_nav">
           <ul class="navbar-nav me-auto">
-            <li class="nav-item dropdown"> <a class="nav-link  dropdown-toggle" href="index.html">île de France </a>
+            <li class="nav-item dropdown"> <a class="nav-link  dropdown-toggle" routerLink="post/department/idf/all">île
+                de France </a>
 
               <ul class="dropdown-menu">
                 <li> <a *ngFor="let department of departments" class="dropdown-item" style="cursor: pointer;"
