--- a/client-jss/src/app/main/components/post-idf-header/post-idf-header.component.html
+++ b/client-jss/src/app/main/components/post-idf-header/post-idf-header.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="selectedDepartment">
+<div>
   <div class="container">
     <div class="bg-container">
       <div class="w-100 justify-content-between">
