--- a/client-jss/src/app/main/components/generic-hub/generic-hub.component.html
+++ b/client-jss/src/app/main/components/generic-hub/generic-hub.component.html
@@ -271,7 +271,7 @@
           </div>
 
 
-          <nav *ngIf="totalPage >= 1" class="mt-4">
+          <nav *ngIf="totalPage > 1" class="mt-4">
             <ul class="pagination justify-content-center">
               <li class="page-item" *ngFor="let p of pages" [class.active]="p === page">
                 <button class="page-link" (click)="goToPage(p)">{{ p + 1 }}</button>
