--- a/client-jss/src/app/main/components/generic-hub/generic-hub.component.html
+++ b/client-jss/src/app/main/components/generic-hub/generic-hub.component.html
@@ -40,20 +40,21 @@
                         </div>
                       </div>
                       <div class="card-body">
-                        <div class="row pb-1 px-2 align-items-center">
-                          <a (click)="openCategoryPosts(post.jssCategories[0], $event)"
-                            class="badge bg-info rounded-pill px-1 col-auto me-2">{{post.jssCategories[0].name}}</a>
-                          <a
-                            class="rounded-outline-icon rounded-circle fs-8 d-flex align-items-center justify-content-center"><i
-                              class="bi-bookmark"></i></a>
+                        <div class="row pb-1 px-2 align-items-center" *ngIf="post.postTags">
+                          <div class="d-flex flex-wrap gap-1">
+                            <a *ngFor="let tag of post.postTags" (click)="openTagPosts(tag, $event)"
+                              class="badge bg-info rounded-pill px-2">{{ tag.name }}</a>
+                            <a
+                              class="rounded-outline-icon rounded-circle fs-8 d-flex align-items-center justify-content-center ms-2">
+                              <i class="bi-bookmark"></i>
+                            </a>
+                          </div>
                         </div>
                         <h4>
                           <a class="card-text-truncate" (click)="openPost(post, $event)"> <img *ngIf="post.isPremium"
                               class="pe-0" src="/assets/images/premium-icon.svg">
                             {{post.titleText}}</a>
                         </h4>
-                        <p class="card-text-truncate mb-0" [innerHTML]="post.excerptText | trustHtml">
-                        </p>
                       </div>
                       <div class="row align-items-center px-2">
                         <div class="col-lg-6">
@@ -87,8 +88,14 @@
                       </div>
                       <div class="card-body  d-md-flex align-items-center">
                         <div class="card-flex-content">
-                          <a (click)="openCategoryPosts(post.jssCategories[0], $event)"
-                            class="badge bg-info rounded-pill px-1 col-auto me-2">{{post.jssCategories[0].name}}</a>
+                          <div class="d-flex flex-wrap">
+                            <a *ngFor="let tag of post.postTags" (click)="openTagPosts(tag, $event)"
+                              class="badge bg-info rounded-pill px-2">{{ tag.name }}</a>
+                            <a
+                              class="rounded-outline-icon rounded-circle fs-8 d-flex align-items-center justify-content-center ms-2">
+                              <i class="bi-bookmark"></i>
+                            </a>
+                          </div>
                           <h4>
                             <a class="card-text-truncate" (click)="openPost(post, $event)"> <img *ngIf="post.isPremium"
                                 class="pe-0" src="/assets/images/premium-icon.svg">
@@ -120,7 +127,7 @@
 
                 <div *ngIf="searchResults && searchResults.length>0 && searchText && searchText.length>2"
                   class="row p-0 fixed-size-img-posts">
-                  <div *ngFor="let post of postsByEntityType.slice(0,6)" class="col-6 mb-4">
+                  <div *ngFor="let post of searchResults.slice(0,6)" class="col-6 mb-4">
                     <article class="border-0 card h-100">
                       <div class="card-img px-2 d-flex">
                         <div class="image-hover-style-1 w-100">
@@ -130,20 +137,21 @@
                         </div>
                       </div>
                       <div class="card-body">
-                        <div class="row pb-1 px-2 align-items-center">
-                          <a (click)="openCategoryPosts(post.jssCategories[0], $event)"
-                            class="badge bg-info rounded-pill px-1 col-auto me-2">{{post.jssCategories[0].name}}</a>
-                          <a
-                            class="rounded-outline-icon rounded-circle fs-8 d-flex align-items-center justify-content-center"><i
-                              class="bi-bookmark"></i></a>
+                        <div class="row pb-1 px-2 align-items-center" *ngIf="post.postTags">
+                          <div class="d-flex flex-wrap gap-1">
+                            <a *ngFor="let tag of post.postTags" (click)="openTagPosts(tag, $event)"
+                              class="badge bg-info rounded-pill px-2">{{ tag.name }}</a>
+                            <a
+                              class="rounded-outline-icon rounded-circle fs-8 d-flex align-items-center justify-content-center ms-2">
+                              <i class="bi-bookmark"></i>
+                            </a>
+                          </div>
                         </div>
                         <h4>
                           <a class="card-text-truncate" (click)="openPost(post, $event)"> <img *ngIf="post.isPremium"
                               class="pe-0" src="/assets/images/premium-icon.svg">
                             {{post.titleText}}</a>
                         </h4>
-                        <p class="card-text-truncate mb-0" [innerHTML]="post.excerptText | trustHtml">
-                        </p>
                       </div>
                       <div class="row align-items-center px-2">
                         <div class="col-lg-6">
@@ -164,7 +172,7 @@
                       </div>
                     </article>
                   </div>
-                  <div *ngFor="let post of postsByEntityType.slice(6)" class="col-12 mb-2">
+                  <div *ngFor="let post of searchResults.slice(6)" class="col-12 mb-2">
                     <article class="blog-style2 card mb-4">
                       <div class="feature-image">
                         <div class="image-frame image-hover-style-1">
@@ -175,8 +183,14 @@
                       </div>
                       <div class="card-body  d-md-flex align-items-center">
                         <div class="card-flex-content">
-                          <a (click)="openCategoryPosts(post.jssCategories[0], $event)"
-                            class="badge bg-info rounded-pill px-1 col-auto me-2">{{post.jssCategories[0].name}}</a>
+                          <div class="d-flex flex-wrap">
+                            <a *ngFor="let tag of post.postTags" (click)="openTagPosts(tag, $event)"
+                              class="badge bg-info rounded-pill px-2">{{ tag.name }}</a>
+                            <a
+                              class="rounded-outline-icon rounded-circle fs-8 d-flex align-items-center justify-content-center ms-2">
+                              <i class="bi-bookmark"></i>
+                            </a>
+                          </div>
                           <h4>
                             <a class="card-text-truncate" (click)="openPost(post, $event)"> <img *ngIf="post.isPremium"
                                 class="pe-0" src="/assets/images/premium-icon.svg">
@@ -220,9 +234,10 @@
                     </div>
                   </div>
                   <ul class="tag-cloud list-inline">
+                    <!-- TODO replace with routerLink and make it work -->
                     <li *ngFor="let tag of tagsByEntityType" class="list-inline-item pb-1"><a
                         class="btn bg-light text-secondary bg-hover-danger text-hover-white bg-hover-secondary text-hover-white"
-                        [routerLink]="'/post/tag/'+tag.slug">{{tag.name}}</a>
+                        (click)="openTagPosts(tag,$event)">{{tag.name}}</a>
                     </li>
                   </ul>
                 </div>
